tests/neg/param.stk
param indent: Int

def padding(unit: Int): Int = indent * unit

param alpha: Int
param beta: Int

def foo(n: Int): Int = alpha + beta * n

def test(a: Int): Int =
  foo 10 with a = 20           // error

def main =
  padding 2 with indent = true // error

  padding 4
    with foo = 6   // error

  foo 10 with alpha = 3, beta = 6
